--- a/сайт/main.html
+++ b/сайт/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="css1.css" rel="stylesheet">
+    <link href="main.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
             <li><a href ="poems.html">Стихи</a></li>
             <li><a href ="#"> Домашние животные Летова</a></li>
             <li><a href ="#">Третья ссылка</a></li>
-            <li><a href ="#">Четвёртая ссылка</a></li>
+           
         </ul>
     </div>
     <div id = "mainBody">
