--- a/Problem Oriendted/9.html
+++ b/Problem Oriendted/9.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>...</title>
     <meta charset="utf-8">
+    <meta name="author" content="Nikita">
     <title>Название документа</title>
     <style>
       #main {
