--- a/сайт/pattern.html
+++ b/сайт/pattern.html
@@ -11,9 +11,9 @@
     <div id = "page">
     <div id = "header">
         <ul id = "liHead">
-            <li><a href ="poems.html">Стихи</a></li>
+            <li><a href ="poems.html">Главная страница</a></li>
             <li><a href ="#"> Домашние животные </a></li>
-            <li><a href ="main.html">Главная страница</a></li>
+            <li><a href ="main.html">Стихи</a></li>
         </ul>
     </div>
     <div id = "mainBody" align="center">
@@ -24,6 +24,9 @@
 				Ласковым ножечеком пытать свою плость
 			</p>
 	  </div>
+      <div id = poemVideo>
+        <iframe width="100%" height="315" src="https://www.youtube.com/embed/eR5Hq9oetHc?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
 	</div>
     </div>
 	<footer>
