--- a/сайт/poems.html
+++ b/сайт/poems.html
@@ -6,20 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="poems.css" rel="stylesheet">
     <title>Document</title>
+<body>
+	<div id=wrap>
    <div id = "header" >
         <ul id = "liHead">
             <li><a href ="main.html">Главная страница</a></li>
             <li><a href ="#"> Домашние животные Летова</a></li>
-            <li><a href ="#">Третья ссылка</a></li>
+            <li><a href ="#">Стихи</a></li>
           
         </ul>
     </div>
 	<div id="main">
 	<div id = "title">
 		<h1>Некоторые песни </h1>
-		<h6>Тут были размщены только песни, без нецензурной лексики</h6>
+		<h6>Тут были размещены только песни, без нецензурной лексики</h6>
 	</div>
-	
 	<div id = "warSong" class = "kindsPoems">
 		<h2>Песни про войну</h2>
 		<ul>
@@ -33,13 +34,6 @@
 			<li>Офелия</li>
 			<li>Листовка</li>
 		</ul>
-	</div>
-	<div id ="philSong" class = "kindsPoems">
-		<h2>Философские песни</h2>
-		<ul>
-			<li>Философская песня о пуле</li>
-			<li>Общество</li>
-		<ul>
 	</div>
 	</div>
 </head>
