--- a/сайт/main.html
+++ b/сайт/main.html
@@ -11,9 +11,9 @@
     <div id = "page">
     <div id = "header">
         <ul id = "liHead">
+            <li><a href ="">Главная страница</a></li>
+            <li><a href ="#"> Домашние животные</a></li>
             <li><a href ="poems.html">Стихи</a></li>
-            <li><a href ="#"> Домашние животные Летова</a></li>
-            <li><a href ="#">Третья ссылка</a></li>
            
         </ul>
     </div>
