--- a/сайт/poems.html
+++ b/сайт/poems.html
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="poems.css" rel="stylesheet">
     <title>Document</title>
+</head>
 <body>
 	<div id=wrap>
-   <div id = "header" >
+    <div id = "header" >
         <ul id = "liHead">
             <li><a href ="main.html">Главная страница</a></li>
             <li><a href ="#"> Домашние животные Летова</a></li>
@@ -36,6 +37,9 @@
 		</ul>
 	</div>
 	</div>
-</head>
+	<footer>
+		Copyright Yeah
+	</footer>
+	</div>
 </body>
 </html>
