--- a/сайт/poems.html
+++ b/сайт/poems.html
@@ -30,7 +30,7 @@
 		</ul>
 	</div>
 	<div id="restSong" class = "kindsPoems">
-		<h2>Спокойные песни</h2>
+		<h2>Песни про госсударство/общество </h2>
 		<ul>
 			<li>Офелия</li>
 			<li>Листовка</li>
